--- a/prodotti.html
+++ b/prodotti.html
@@ -134,41 +134,366 @@
     </div>
 
     <!-- CONTENUTO DI DESTRA -->
-    <div class="container-fluid overflow-y-auto">
+    <div class="container-fluid overflow-y-auto ">
+      <div class="row">
+        <div class="col-12 d-flex justify-content-between align-items-center mt-4 ps-3 border-bottom pb-2 mb-3 mx-auto">
+          <h2 class="fw-semibold">
+            10 prodotti trovati
+          </h2>
+          <div class="btn-group">
+            <button type="button" class="btn btn-outline-secondary">Esporta</button>
+            <a href="nuovo-prodotto.html" class="btn btn-outline-secondary">Nuovo</a>
+          </div>
+        </div>
 
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-            <tr>
-              <th class="border" scope="col-9">Nome</th>
-              <th class="border d-none d-sm-table-cell" scope="col-1">Prezzo</th>
-              <th class="border d-none d-md-table-cell" scope="col-1">Stato</th>
-              <th class="border" scope="col-1">Azioni</th>
-            </tr>
-          </thead>
+        <!-- TABELLA -->
+        <div class="col-12">
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col-9">Nome</th>
+                  <th class="d-none d-sm-table-cell text-center" scope="col-1">Prezzo</th>
+                  <th class="d-none d-md-table-cell text-center" scope="col-1">Stato</th>
+                  <th class=" text-center" scope="col-1">Azioni</th>
+                </tr>
+              </thead>
+              <!-- CORPO DELLA TABELLA -->
+              <tbody>
+                <!-- RIGA 1 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
 
-          <tbody>
-            <tr>
-              <td class="d-flex">
-                <img src="https://picsum.photos/50" alt="">
-                <div class="ms-3">
-                  <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                  <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a lunga durata</p>
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-success border border-success rounded-5 fw-semibold px-2 py-1">
+                      &check;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+                <!-- RIGA 2 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
+
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-success border border-success rounded-5 fw-semibold px-2 py-1">
+                      &check;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+                <!-- RIGA 3 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
+
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-success border border-success rounded-5 fw-semibold px-2 py-1">
+                      &check;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+                <!-- RIGA 4 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
+
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-success border border-success rounded-5 fw-semibold px-2 py-1">
+                      &check;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+                <!-- RIGA 5 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
+
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-success border border-success rounded-5 fw-semibold px-2 py-1">
+                      &check;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+                <!-- RIGA 6 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
+
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-success border border-success rounded-5 fw-semibold px-2 py-1">
+                      &check;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+                <!-- RIGA 7 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
+
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-danger border border-danger rounded-5 fw-semibold px-2 py-1">
+                      &cross;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+                <!-- RIGA 8 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
+
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-success border border-success rounded-5 fw-semibold px-2 py-1">
+                      &check;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+                <!-- RIGA 9 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
+
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-success border border-success rounded-5 fw-semibold px-2 py-1">
+                      &check;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+                <!-- RIGA 10 -->
+                <tr>
+                  <td class="d-flex">
+                    <img src="https://picsum.photos/50" alt="">
+                    <div class="ms-3">
+                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
+                        lunga durata</p>
+                    </div>
+                  </td>
+
+                  <td class="d-none d-sm-table-cell pt-3 text-center">
+                    799.00 €
+                  </td>
+
+                  <td class="d-none d-md-table-cell pt-3 text-center">
+                    <span class="text-danger border border-danger rounded-5 fw-semibold px-2 py-1">
+                      &cross;
+                    </span>
+                  </td>
+
+                  <td class="pt-3 text-center">
+                    <button type="button" class="btn btn-sm btn-outline-primary">
+                      <span>&#9998;</span>
+                    </button>
+                    <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <span>&#x1F5D1;</span>
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <!-- MODAL -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content rounded-3 shadow">
+                <div class="modal-body p-4 text-center">
+                  <h5 class="mb-0">Elimina prodotto</h5>
+                  <p class="mb-0">L'eliminazione sarà irreversibile, sei sicuro?</p>
                 </div>
-              </td>
-
-              <td class="d-none d-sm-table-cell">prezzo</td>
-              <td class="d-none d-md-table-cell">stato</td>
-              <td>Cell</td>
-            </tr>
-          </tbody>
-        </table>
-
+                <div class="modal-footer flex-nowrap p-0">
+                  <button type="button"
+                    class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0 border-end"><strong>Si,
+                      continua</strong></button>
+                  <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 py-3 m-0 rounded-0"
+                    data-bs-dismiss="modal">Annulla</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-
-
-
 
   </main>
 </body>
