--- a/prodotti.html
+++ b/prodotti.html
@@ -196,14 +196,13 @@
                   <td class="d-flex">
                     <img src="https://picsum.photos/50" alt="">
                     <div class="ms-3">
-                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
-                        lunga durata</p>
+                      <p class="my-0">Apple MacBook Pro 13</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Processore M1, SSD ultraveloce, Display Retina</p>
                     </div>
                   </td>
 
                   <td class="d-none d-sm-table-cell pt-3 text-center">
-                    799.00 €
+                    1299.00 €
                   </td>
 
                   <td class="d-none d-md-table-cell pt-3 text-center">
@@ -227,14 +226,14 @@
                   <td class="d-flex">
                     <img src="https://picsum.photos/50" alt="">
                     <div class="ms-3">
-                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
-                        lunga durata</p>
+                      <p class="my-0">Smartwatch Apple Watch Series 6</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Monitoraggio attività, Misurazione
+                        ossigeno nel sangue, Display Always-On</p>
                     </div>
                   </td>
 
                   <td class="d-none d-sm-table-cell pt-3 text-center">
-                    799.00 €
+                    249.00 €
                   </td>
 
                   <td class="d-none d-md-table-cell pt-3 text-center">
@@ -258,14 +257,15 @@
                   <td class="d-flex">
                     <img src="https://picsum.photos/50" alt="">
                     <div class="ms-3">
-                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
-                        lunga durata</p>
+                      <p class="my-0">Auricolari Wireless Apple AirPods Pro</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Cancellazione attiva del rumore,
+                        Resistenza all'acqua e al sudore
+                        Console Sony PlayStation 5</p>
                     </div>
                   </td>
 
                   <td class="d-none d-sm-table-cell pt-3 text-center">
-                    799.00 €
+                    279.00 €
                   </td>
 
                   <td class="d-none d-md-table-cell pt-3 text-center">
@@ -289,14 +289,14 @@
                   <td class="d-flex">
                     <img src="https://picsum.photos/50" alt="">
                     <div class="ms-3">
-                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
-                        lunga durata</p>
+                      <p class="my-0">Console Sony PlayStation 5</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Gaming ad alta definizione, Tempi di
+                        caricamento rapidi, Supporto per giochi 4K</p>
                     </div>
                   </td>
 
                   <td class="d-none d-sm-table-cell pt-3 text-center">
-                    799.00 €
+                    499.00 €
                   </td>
 
                   <td class="d-none d-md-table-cell pt-3 text-center">
@@ -320,14 +320,14 @@
                   <td class="d-flex">
                     <img src="https://picsum.photos/50" alt="">
                     <div class="ms-3">
-                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
-                        lunga durata</p>
+                      <p class="my-0">Monitor Gaming ASUS ROG Strix XG27UQ</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Schermo 4K UHD, Frequenza di
+                        aggiornamento 144Hz, Tecnologia HDR</p>
                     </div>
                   </td>
 
                   <td class="d-none d-sm-table-cell pt-3 text-center">
-                    799.00 €
+                    999.00 €
                   </td>
 
                   <td class="d-none d-md-table-cell pt-3 text-center">
@@ -351,14 +351,14 @@
                   <td class="d-flex">
                     <img src="https://picsum.photos/50" alt="">
                     <div class="ms-3">
-                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
-                        lunga durata</p>
+                      <p class="my-0">Stampante Multifunzione HP LaserJet Pro MFP M28w</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Stampa, Scansione, Copia,
+                        Connessione Wi-Fi</p>
                     </div>
                   </td>
 
                   <td class="d-none d-sm-table-cell pt-3 text-center">
-                    799.00 €
+                    159.00 €
                   </td>
 
                   <td class="d-none d-md-table-cell pt-3 text-center">
@@ -382,14 +382,14 @@
                   <td class="d-flex">
                     <img src="https://picsum.photos/50" alt="">
                     <div class="ms-3">
-                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
-                        lunga durata</p>
+                      <p class="my-0">Router Wi-Fi Mesh TP-Link Deco X20</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Copertura fino a 560 mq, Velocità
+                        fino a 1800 Mbps, Gestione tramite app</p>
                     </div>
                   </td>
 
                   <td class="d-none d-sm-table-cell pt-3 text-center">
-                    799.00 €
+                    199.00 €
                   </td>
 
                   <td class="d-none d-md-table-cell pt-3 text-center">
@@ -413,14 +413,14 @@
                   <td class="d-flex">
                     <img src="https://picsum.photos/50" alt="">
                     <div class="ms-3">
-                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
-                        lunga durata</p>
+                      <p class="my-0">SSD NVMe Western Digital Black SN850</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Capacità 1TB, Velocità di lettura
+                        fino a 7000 MB/s, Tecnologia PCIe Gen4</p>
                     </div>
                   </td>
 
                   <td class="d-none d-sm-table-cell pt-3 text-center">
-                    799.00 €
+                    229.00 €
                   </td>
 
                   <td class="d-none d-md-table-cell pt-3 text-center">
@@ -444,14 +444,14 @@
                   <td class="d-flex">
                     <img src="https://picsum.photos/50" alt="">
                     <div class="ms-3">
-                      <p class="my-0">Smartphone Samsung Galaxy S21</p>
-                      <p class="text-secondary my-0 d-none d-xl-block">Display AMOLED, Fotocamera Ultra Wide, Batteria a
-                        lunga durata</p>
+                      <p class="my-0">Mouse Gaming Logitech G502 HERO</p>
+                      <p class="text-secondary my-0 d-none d-xl-block">Sensore HERO 25K, 11 pulsanti
+                        programmabili, Peso personalizzabile</p>
                     </div>
                   </td>
 
                   <td class="d-none d-sm-table-cell pt-3 text-center">
-                    799.00 €
+                    79.99 €
                   </td>
 
                   <td class="d-none d-md-table-cell pt-3 text-center">
