--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sponsorizzazione</title>
+  <title>Nuovo Prodotto</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 
@@ -20,32 +20,32 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav mt-1 ms-5">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="dashboard.html">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="sponsor.html">Sponsorizzazione</a>
+              <a class="nav-link" href="sponsor.html">Sponsorizzazione</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="prodotti.html">Prodotti</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nuovo-prodotto.html">Nuovo prodotto</a>
+              <a class="nav-link active" href="nuovo-prodotto.html">Nuovo prodotto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Clienti</a>
             </li>
           </ul>
-          <ul class="navbar-nav mt-5">
+          <ul class="navbar-nav ms-1 mt-5">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Impostazioni</a>
+              <a class="nav-link active" aria-current="page" href="#"><svg width="32" height="32" class="rounded-circle me-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"/></svg>Impostazioni</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Profilo</a>
+              <a class="nav-link" href="#"><img src="https://avatars.githubusercontent.com/u/163033493?v=4" alt="" width="32" height="32" class="rounded-circle me-2">Profilo </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Esci</a>
+              <a class="nav-link" href="#"><svg width="32" height="32" class="me-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"/></svg>Esci</a>
             </li>
           </ul>
         </div>
@@ -54,17 +54,17 @@
   </header>
 
   <!-- MAIN -->
-  <main class="d-flex overflow-y-hidden" style="height: 100vh;">
+  <main class="d-flex" style="height: 100vh;">
 
     <!-- SLIDEBAR -->
-    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark">
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark" >
       <a href="dashboard.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-4">Bootstrap Dashboard</span>
       </a>
       <hr class="text-light">
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-          <a href="dashboard.html" class="nav-link link-body-emphasis align-items-center d-flex" aria-current="page">
+          <a href="dashboard.html" class="nav-link link-body-emphasis align-items-center d-flex active" aria-current="page">
             <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512">
               <path
@@ -74,7 +74,7 @@
           </a>
         </li>
         <li>
-          <a href="sponsor.html" class="nav-link link-body-emphasis align-items-center d-flex active">
+          <a href="sponsor.html" class="nav-link link-body-emphasis align-items-center d-flex">
             <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 512 512">
               <path
@@ -133,89 +133,15 @@
       </div>
     </div>
 
-    <!-- CONTENUTO DI DESTRA -->
-    <div class="container-fluid overflow-y-auto">
 
-      <!-- PRIMA SEZIONE -->
-      <div class="container p-5">
-        <div class="row d-flex justify-content-center mb-4">
-          <div class="col-12 d-flex flex-column justify-content-center">
-            <h2 class="fw-semibold text-center mb-3">
-              Trova il piano pefetto per te!
-            </h2>
-            <p class="text-center lead">
-              Sceglie tra le nostre opzioni di abbonamento e goditi funzionalità <br> esclusive e performance migliori.
-            </p>
-            <p class="text-center fw-semibold">
-              Porta la tua esperienza al livello successivo!
-            </p>
-            <div class="mx-auto">
-              <button type="button" class="btn btn-primary btn-lg rounded-5">Scopri di più</button>
-              <button type="button" class="btn btn-lg btn-outline-secondary rounded-5">Contattaci</button>
+    <div class="container-fluid overflow-y-auto bg-black">
+        <div class="row">
+            <div class="col-12 text-center mt-5">
+                <img style="width: 50%;" src="https://avatars.githubusercontent.com/u/163033493?v=4" alt="">
             </div>
-          </div>
         </div>
-      </div>
-
-      <!-- SECONDA SEZIONE -->
-      <div class="container">
-        <div class="row row-cols-1 row-cols-lg-3 mb-3 text-center">
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Gratis</h4>
-              </div>
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title">€ 0<small class="text-body-secondary fw-light">/mese</small></h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>10 utenti</li>
-                  <li>2 GB di spazio</li>
-                  <li>Pubblicità</li>
-                  <li>Supporto email</li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary">Prosegui</button>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm border-primary">
-              <div class="card-header py-3 text-bg-primary border-primary">
-                <h4 class="my-0 fw-normal">Premium</h4>
-              </div>
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title">€ 15<small class="text-body-secondary fw-light">/mese</small>
-                </h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>50 utenti</li>
-                  <li>10 GB di spazio</li>
-                  <li>Senza pubblicità</li>
-                  <li>Supporto email prioritario</li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Prosegui</button>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Enterprise</h4>
-              </div>
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title">€ 29<small class="text-body-secondary fw-light">/mese</small>
-                </h1>
-                <ul class="list-unstyled mt-3 mb-4">
-                  <li>Utenti illimitati</li>
-                  <li>Spazio illimitato</li>
-                  <li>Senza pubblicità</li>
-                  <li>Supporto via email e chat</li>
-                </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Prosegui</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
+
   </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
