--- a/nuovo-prodotto.html
+++ b/nuovo-prodotto.html
@@ -14,7 +14,7 @@
   <header class="d-block d-sm-block d-md-none sticky-top">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Bootstrap Dashboard</a>
+        <a class="navbar-brand" href="dashboard.html">Bootstrap Dashboard</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Dashboard</a>
+              <a class="nav-link" aria-current="page" href="dashboard.html">Dashboard</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="sponsor.html">Sponsorizzazione</a>
@@ -58,13 +58,13 @@
 
     <!-- SLIDEBAR -->
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary d-none d-sm-none d-md-block" data-bs-theme="dark" >
-      <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+      <a href="dashboard.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-4">Bootstrap Dashboard</span>
       </a>
       <hr class="text-light">
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-          <a href="#" class="nav-link link-body-emphasis align-items-center d-flex" aria-current="page">
+          <a href="dashboard.html" class="nav-link link-body-emphasis align-items-center d-flex" aria-current="page">
             <svg class="bi pe-none me-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 576 512">
               <path
@@ -119,8 +119,8 @@
       <div class="dropdown">
         <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
           data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-          <strong>Mario Rossi</strong>
+          <img src="https://avatars.githubusercontent.com/u/163033493?v=4" alt="" width="32" height="32" class="rounded-circle me-2">
+          <strong>Alessandro Palumbo</strong>
         </a>
         <ul class="dropdown-menu text-small shadow">
           <li><a class="dropdown-item" href="#">Impostazioni</a></li>
