--- a/dashboard.html
+++ b/dashboard.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="#">Clienti</a>
             </li>
           </ul>
-          <ul class="navbar-nav ms-1 mt-5">
+          <ul class="navbar-nav mt-5">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Impostazioni</a>
             </li>
